--- a/mandelbulber2/formula/ui/kaleidoscopic_ifs.ui
+++ b/mandelbulber2/formula/ui/kaleidoscopic_ifs.ui
@@ -3800,7 +3800,7 @@
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;http://www.fractalforums.com/ifs-iterated-function-systems/kaleidoscopic-(escape-time-ifs)/&quot;&gt;http://www.fractalforums.com/ifs-iterated-function-systems/kaleidoscopic-(escape-time-ifs)/&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;IFS_001.fract&lt;br&gt;IFS_002.fract&lt;br&gt;boolean001.fract&lt;br&gt;mandelbox_menger_morph.fract&lt;br&gt;octahedron with box foldig_2.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;IFS_001.fract&lt;br&gt;IFS_002.fract&lt;br&gt;boolean001.fract&lt;br&gt;chromatic_aberration.fract&lt;br&gt;mandelbox_menger_morph.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
